@@ -31,8 +31,6 @@ __all__ = (
 
 __version__ = '0.8.0alpha2'
 
-__unittest = True
-
 
 import sys
 
